# ovoprice

./: CLAUDE.md  Dockerfile  README.md  database.py  main.py  pyproject.toml  scheduler.py  scraper.py
templates/: add.html  base.html  index.html  preview.html  product.html
tests/: conftest.py  test_routes.py  test_scheduler.py  test_scraper.py  test_time_ago.py
