[project]
name = "ovoprice"
version = "0.1.0"
description = "Price tracker for ampow.com"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "httpx>=0.28",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "apscheduler>=3.11",
]

[project.scripts]
ovoprice = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
